ödev yapıldı commit edildi.

--- a/01-html-kategorisi/006-Basliklar-ve-Paragraflarla-Calismak.html
+++ b/01-html-kategorisi/006-Basliklar-ve-Paragraflarla-Calismak.html
@@ -7,8 +7,8 @@
 </p>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
 <p>Veritatis eveniet dolorem exercitationem molestiae possimus aliquam.</p>
-<p>Maiores voluptas vero asperiores tenetur a officia.</p>
-<p>Dolores fugiat eius inventore ut voluptate quos?</p>
+<p>111111111Maiores voluptas vero asperiores tenetur a officia.
+<br> fugiat <hr> eius inventore ut voluptate quos?</p>
 <p>Laborum iusto quas, obcaecati suscipit quam quo.</p>
 
 <h3>Başlıklar ve Paragraflarla çalışmak</h3>
